--- a/research/01_data_ingestion.ipynb
+++ b/research/01_data_ingestion.ipynb
@@ -17,7 +17,7 @@
     {
      "data": {
       "text/plain": [
-       "'d:\\\\Bappy\\\\YouTube\\\\Kidney-Disease-Classification-Deep-Learning-Project\\\\research'"
+       "'c:\\\\Users\\\\Dapo\\\\Downloads\\\\Documents\\\\learn\\\\Kidney_project\\\\Kidney-Disease-Classification-Deep-Learning-Project\\\\research'"
       ]
      },
      "execution_count": 2,
@@ -46,7 +46,7 @@
     {
      "data": {
       "text/plain": [
-       "'d:\\\\Bappy\\\\YouTube\\\\Kidney-Disease-Classification-Deep-Learning-Project'"
+       "'c:\\\\Users\\\\Dapo\\\\Downloads\\\\Documents\\\\learn\\\\Kidney_project\\\\Kidney-Disease-Classification-Deep-Learning-Project'"
       ]
      },
      "execution_count": 4,
@@ -188,11 +188,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[2023-09-29 19:30:37,399: INFO: common: yaml file: config\\config.yaml loaded successfully]\n",
-      "[2023-09-29 19:30:37,407: INFO: common: yaml file: params.yaml loaded successfully]\n",
-      "[2023-09-29 19:30:37,408: INFO: common: created directory at: artifacts]\n",
-      "[2023-09-29 19:30:37,410: INFO: common: created directory at: artifacts/data_ingestion]\n",
-      "[2023-09-29 19:30:37,411: INFO: 3172177572: Downloading data from https://drive.google.com/file/d/1vlhZ5c7abUKF8xXERIw6m9Te8fW7ohw3/view?usp=sharing into file artifacts/data_ingestion/data.zip]\n"
+      "[2023-10-10 21:38:19,272: INFO: common: yaml file: config\\config.yaml loaded successfully]\n",
+      "[2023-10-10 21:38:19,280: INFO: common: yaml file: params.yaml loaded successfully]\n",
+      "[2023-10-10 21:38:19,287: INFO: common: created directory at: artifacts]\n",
+      "[2023-10-10 21:38:19,292: INFO: common: created directory at: artifacts/data_ingestion]\n",
+      "[2023-10-10 21:38:19,295: INFO: 3172177572: Downloading data from https://drive.google.com/file/d/1vlhZ5c7abUKF8xXERIw6m9Te8fW7ohw3/view?usp=sharing into file artifacts/data_ingestion/data.zip]\n"
      ]
     },
     {
@@ -201,16 +201,16 @@
      "text": [
       "Downloading...\n",
       "From (uriginal): https://drive.google.com/uc?/export=download&id=1vlhZ5c7abUKF8xXERIw6m9Te8fW7ohw3\n",
-      "From (redirected): https://drive.google.com/uc?/export=download&id=1vlhZ5c7abUKF8xXERIw6m9Te8fW7ohw3&confirm=t&uuid=c57857b4-dc46-4b68-8e4f-7fc6264eacfe\n",
-      "To: d:\\Bappy\\YouTube\\Kidney-Disease-Classification-Deep-Learning-Project\\artifacts\\data_ingestion\\data.zip\n",
-      "100%|██████████| 57.7M/57.7M [01:38<00:00, 587kB/s]"
+      "From (redirected): https://drive.google.com/uc?/export=download&id=1vlhZ5c7abUKF8xXERIw6m9Te8fW7ohw3&confirm=t&uuid=5e7d4722-1737-4604-ab25-3ee266f00b32\n",
+      "To: c:\\Users\\Dapo\\Downloads\\Documents\\learn\\Kidney_project\\Kidney-Disease-Classification-Deep-Learning-Project\\artifacts\\data_ingestion\\data.zip\n",
+      "100%|██████████| 57.7M/57.7M [00:35<00:00, 1.62MB/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[2023-09-29 19:32:18,290: INFO: 3172177572: Downloaded data from https://drive.google.com/file/d/1vlhZ5c7abUKF8xXERIw6m9Te8fW7ohw3/view?usp=sharing into file artifacts/data_ingestion/data.zip]\n"
+      "[2023-10-10 21:38:57,460: INFO: 3172177572: Downloaded data from https://drive.google.com/file/d/1vlhZ5c7abUKF8xXERIw6m9Te8fW7ohw3/view?usp=sharing into file artifacts/data_ingestion/data.zip]\n"
      ]
     },
     {
