--- a/research/04_model_evaluation_with_mlflow.ipynb
+++ b/research/04_model_evaluation_with_mlflow.ipynb
@@ -11,16 +11,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'d:\\\\Bappy\\\\YouTube\\\\Kidney-Disease-Classification-Deep-Learning-Project\\\\research'"
+       "'c:\\\\Users\\\\Dapo\\\\Downloads\\\\Documents\\\\learn\\\\Kidney_project\\\\Kidney-Disease-Classification-Deep-Learning-Project'"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -60,18 +60,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "os.environ[\"MLFLOW_TRACKING_URI\"]=\"https://dagshub.com/entbappy/Kidney-Disease-Classification-MLflow-DVC.mlflow\"\n",
-    "os.environ[\"MLFLOW_TRACKING_USERNAME\"]=\"entbappy\"\n",
-    "os.environ[\"MLFLOW_TRACKING_PASSWORD\"]=\"6824692c47a369aa6f9eac5b10041d5c8edbcef0\""
+    "# MLFLOW_TRACKING_URI=https://dagshub.com/Oladapoduk/Kidney-Disease-Classification-Deep-Learning-Project.mlflow \\\n",
+    "# MLFLOW_TRACKING_USERNAME=Oladapoduk \\\n",
+    "# MLFLOW_TRACKING_PASSWORD=f8959e5d5b06a24f7ec534c23b422b6fb2d294ab \\\n",
+    "# python script.py"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "os.environ[\"MLFLOW_TRACKING_URI\"]=\"https://dagshub.com/Oladapoduk/Kidney-Disease-Classification-Deep-Learning-Project.mlflow\"\n",
+    "os.environ[\"MLFLOW_TRACKING_USERNAME\"]=\"Oladapoduk\"\n",
+    "os.environ[\"MLFLOW_TRACKING_PASSWORD\"]=\"f8959e5d5b06a24f7ec534c23b422b6fb2d294ab\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -108,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -118,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -136,7 +148,7 @@
     "        eval_config = EvaluationConfig(\n",
     "            path_of_model=\"artifacts/training/model.h5\",\n",
     "            training_data=\"artifacts/data_ingestion/kidney-ct-scan-image\",\n",
-    "            mlflow_uri=\"https://dagshub.com/entbappy/Kidney-Disease-Classification-MLflow-DVC.mlflow\",\n",
+    "            mlflow_uri=\"https://dagshub.com/Oladapoduk/Kidney-Disease-Classification-Deep-Learning-Project.mlflow\",\n",
     "            all_params=self.params,\n",
     "            params_image_size=self.params.IMAGE_SIZE,\n",
     "            params_batch_size=self.params.BATCH_SIZE\n",
@@ -148,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -161,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -234,46 +246,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[2023-10-02 15:10:13,653: INFO: common: yaml file: config\\config.yaml loaded successfully]\n",
-      "[2023-10-02 15:10:13,655: INFO: common: yaml file: params.yaml loaded successfully]\n",
-      "[2023-10-02 15:10:13,656: INFO: common: created directory at: artifacts]\n",
+      "[2023-10-10 23:17:35,042: INFO: common: yaml file: config\\config.yaml loaded successfully]\n",
+      "[2023-10-10 23:17:35,055: INFO: common: yaml file: params.yaml loaded successfully]\n",
+      "[2023-10-10 23:17:35,058: INFO: common: created directory at: artifacts]\n",
       "Found 139 images belonging to 2 classes.\n",
-      "9/9 [==============================] - 12s 1s/step - loss: 1.9542 - accuracy: 0.6115\n",
-      "[2023-10-02 15:10:26,038: INFO: common: json file saved at: scores.json]\n"
+      "9/9 [==============================] - 45s 5s/step - loss: 9.5780 - accuracy: 0.5036\n",
+      "[2023-10-10 23:18:21,503: INFO: common: json file saved at: scores.json]\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023/10/02 15:10:28 WARNING mlflow.tensorflow: You are saving a TensorFlow Core model or Keras model without a signature. Inference with mlflow.pyfunc.spark_udf() will not work unless the model's pyfunc representation accepts pandas DataFrames as inference inputs.\n"
+      "2023/10/10 23:18:28 WARNING mlflow.tensorflow: You are saving a TensorFlow Core model or Keras model without a signature. Inference with mlflow.pyfunc.spark_udf() will not work unless the model's pyfunc representation accepts pandas DataFrames as inference inputs.\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[2023-10-02 15:10:29,308: WARNING: save: Found untraced functions such as _jit_compiled_convolution_op, _jit_compiled_convolution_op, _jit_compiled_convolution_op, _jit_compiled_convolution_op, _jit_compiled_convolution_op while saving (showing 5 of 14). These functions will not be directly callable after loading.]\n",
-      "INFO:tensorflow:Assets written to: C:\\Users\\bokti\\AppData\\Local\\Temp\\tmpny8egng1\\model\\data\\model\\assets\n",
-      "[2023-10-02 15:10:29,857: INFO: builder_impl: Assets written to: C:\\Users\\bokti\\AppData\\Local\\Temp\\tmpny8egng1\\model\\data\\model\\assets]\n"
+      "[2023-10-10 23:18:30,498: WARNING: save: Found untraced functions such as _jit_compiled_convolution_op, _jit_compiled_convolution_op, _jit_compiled_convolution_op, _jit_compiled_convolution_op, _jit_compiled_convolution_op while saving (showing 5 of 14). These functions will not be directly callable after loading.]\n",
+      "INFO:tensorflow:Assets written to: C:\\Users\\Dapo\\AppData\\Local\\Temp\\tmpi_hb4o_3\\model\\data\\model\\assets\n",
+      "[2023-10-10 23:18:31,633: INFO: builder_impl: Assets written to: C:\\Users\\Dapo\\AppData\\Local\\Temp\\tmpi_hb4o_3\\model\\data\\model\\assets]\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "d:\\Softwares\\anaconda3\\envs\\kidney\\lib\\site-packages\\_distutils_hack\\__init__.py:33: UserWarning: Setuptools is replacing distutils.\n",
-      "  warnings.warn(\"Setuptools is replacing distutils.\")\n",
       "Registered model 'VGG16Model' already exists. Creating a new version of this model...\n",
-      "2023/10/02 15:12:07 INFO mlflow.tracking._model_registry.client: Waiting up to 300 seconds for model version to finish creation.                     Model name: VGG16Model, version 4\n",
-      "Created version '4' of model 'VGG16Model'.\n"
+      "2023/10/10 23:19:52 INFO mlflow.tracking._model_registry.client: Waiting up to 300 seconds for model version to finish creation.                     Model name: VGG16Model, version 3\n",
+      "Created version '3' of model 'VGG16Model'.\n"
      ]
     }
    ],
