--- a/research/02_prepare_base_model.ipynb
+++ b/research/02_prepare_base_model.ipynb
@@ -17,7 +17,7 @@
     {
      "data": {
       "text/plain": [
-       "'d:\\\\Bappy\\\\YouTube\\\\Kidney-Disease-Classification-Deep-Learning-Project\\\\research'"
+       "'c:\\\\Users\\\\Dapo\\\\Downloads\\\\Documents\\\\learn\\\\Kidney_project\\\\Kidney-Disease-Classification-Deep-Learning-Project\\\\research'"
       ]
      },
      "execution_count": 2,
@@ -46,7 +46,7 @@
     {
      "data": {
       "text/plain": [
-       "'d:\\\\Bappy\\\\YouTube\\\\Kidney-Disease-Classification-Deep-Learning-Project'"
+       "'c:\\\\Users\\\\Dapo\\\\Downloads\\\\Documents\\\\learn\\\\Kidney_project\\\\Kidney-Disease-Classification-Deep-Learning-Project'"
       ]
      },
      "execution_count": 4,
@@ -220,11 +220,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[2023-10-02 09:52:42,695: INFO: common: yaml file: config\\config.yaml loaded successfully]\n",
-      "[2023-10-02 09:52:42,700: INFO: common: yaml file: params.yaml loaded successfully]\n",
-      "[2023-10-02 09:52:42,702: INFO: common: created directory at: artifacts]\n",
-      "[2023-10-02 09:52:42,703: INFO: common: created directory at: artifacts/prepare_base_model]\n",
-      "[2023-10-02 09:52:43,136: WARNING: saving_utils: Compiled the loaded model, but the compiled metrics have yet to be built. `model.compile_metrics` will be empty until you train or evaluate the model.]\n",
+      "[2023-10-10 22:10:52,251: INFO: common: yaml file: config\\config.yaml loaded successfully]\n",
+      "[2023-10-10 22:10:52,269: INFO: common: yaml file: params.yaml loaded successfully]\n",
+      "[2023-10-10 22:10:52,269: INFO: common: created directory at: artifacts]\n",
+      "[2023-10-10 22:10:52,269: INFO: common: created directory at: artifacts/prepare_base_model]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Downloading data from https://storage.googleapis.com/tensorflow/keras-applications/vgg16/vgg16_weights_tf_dim_ordering_tf_kernels_notop.h5\n",
+      "58889256/58889256 [==============================] - 35s 1us/step\n",
+      "[2023-10-10 22:11:29,136: WARNING: saving_utils: Compiled the loaded model, but the compiled metrics have yet to be built. `model.compile_metrics` will be empty until you train or evaluate the model.]\n",
       "Model: \"model\"\n",
       "_________________________________________________________________\n",
       " Layer (type)                Output Shape              Param #   \n",
