--- a/research/03_model_training.ipynb
+++ b/research/03_model_training.ipynb
@@ -17,7 +17,7 @@
     {
      "data": {
       "text/plain": [
-       "'d:\\\\Bappy\\\\YouTube\\\\Kidney-Disease-Classification-Deep-Learning-Project\\\\research'"
+       "'c:\\\\Users\\\\Dapo\\\\Downloads\\\\Documents\\\\learn\\\\Kidney_project\\\\Kidney-Disease-Classification-Deep-Learning-Project\\\\research'"
       ]
      },
      "execution_count": 2,
@@ -46,7 +46,7 @@
     {
      "data": {
       "text/plain": [
-       "'d:\\\\Bappy\\\\YouTube\\\\Kidney-Disease-Classification-Deep-Learning-Project'"
+       "'c:\\\\Users\\\\Dapo\\\\Downloads\\\\Documents\\\\learn\\\\Kidney_project\\\\Kidney-Disease-Classification-Deep-Learning-Project'"
       ]
      },
      "execution_count": 4,
@@ -148,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -235,20 +235,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[2023-10-02 10:21:07,888: INFO: common: yaml file: config\\config.yaml loaded successfully]\n",
-      "[2023-10-02 10:21:07,890: INFO: common: yaml file: params.yaml loaded successfully]\n",
-      "[2023-10-02 10:21:07,892: INFO: common: created directory at: artifacts]\n",
-      "[2023-10-02 10:21:07,893: INFO: common: created directory at: artifacts\\training]\n",
+      "[2023-10-10 22:25:41,710: INFO: common: yaml file: config\\config.yaml loaded successfully]\n",
+      "[2023-10-10 22:25:41,720: INFO: common: yaml file: params.yaml loaded successfully]\n",
+      "[2023-10-10 22:25:41,720: INFO: common: created directory at: artifacts]\n",
+      "[2023-10-10 22:25:41,728: INFO: common: created directory at: artifacts\\training]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "Found 93 images belonging to 2 classes.\n",
       "Found 372 images belonging to 2 classes.\n",
-      "23/23 [==============================] - 38s 2s/step - loss: 12.0650 - accuracy: 0.5618 - val_loss: 14.3907 - val_accuracy: 0.6000\n"
+      "23/23 [==============================] - 172s 7s/step - loss: 11.4725 - accuracy: 0.5534 - val_loss: 2.2126 - val_accuracy: 0.4500\n"
      ]
     }
    ],
